fix nav bar gap

--- a/src/assets/form-wizard/bs_nav_pills.scss
+++ b/src/assets/form-wizard/bs_nav_pills.scss
@@ -23,7 +23,7 @@
   padding-left: 0; // Override default ul/ol
   list-style: none;
   flex-wrap: nowrap;
-  gap: 25px;
+  gap: 20px;
   overflow-x: auto;
   scrollbar-width: thin;
   display: flex;
